--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.cern.eam</groupId>
 	<artifactId>eam-wshub-core</artifactId>
-	<version>11.4-23-SNAPSHOT</version>
+	<version>11.4-24-SNAPSHOT</version>
 
 	<name>EAM WS Hub Core</name>
 	<description>High-level Java SE library that provides all core functionalities of EAM WS Hub.</description>
@@ -111,12 +111,12 @@
 
 	<distributionManagement>
 		<repository>
-			<id>maven-staging</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+			<id>eis</id>
+			<url>https://edmstools.cern.ch/nexus/content/repositories/ase-eds-releases</url>
 		</repository>
 		<snapshotRepository>
-			<id>maven-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>eis</id>
+			<url>https://edmstools.cern.ch/nexus/content/repositories/ase-eds-snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
