Use reflection to facilitate the mapping between WSHub and Infor Entities

--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,12 @@
 		<dependency>
 			<groupId>ch.cern.eam</groupId>
 			<artifactId>eam-wshub-proxyclient</artifactId>
-			<version>11.4-6</version>
+			<version>11.4-8</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.4</version>
 		</dependency>
 	</dependencies>
 
