--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,12 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
-			<version>3.0.5</version>
+			<version>3.3.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+			<version>3.3.5</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
