--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
+				<configuration>
+					<useFile>false</useFile>
+				</configuration>
 			</plugin>
 
 			<plugin>
