--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,12 @@
 			<version>3.3.5</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.6</version>
+    </dependency>
+    <dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.6.0</version>
