--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>ch.cern.eam</groupId>
             <artifactId>eam-wshub-proxyclient</artifactId>
-            <version>11.5-8-SNAPSHOT</version>
+            <version>11.5-8</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
