--- a/pom.xml
+++ b/pom.xml
@@ -100,23 +100,16 @@
             <artifactId>eam-wshub-proxyclient</artifactId>
             <version>${eam-wshub-proxyclient.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.sun.xml.messaging.saaj</groupId>
-            <artifactId>saaj-impl</artifactId>
-            <version>3.0.4</version>
-            <scope>runtime</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxws</artifactId>
             <version>4.0.4</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http</artifactId>
             <version>4.0.4</version>
-            <scope>compile</scope>
         </dependency>
 
         <!-- Provided dependencies -->
@@ -137,6 +130,14 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Runtime dependencies -->
+        <dependency>
+            <groupId>com.sun.xml.messaging.saaj</groupId>
+            <artifactId>saaj-impl</artifactId>
+            <version>3.0.4</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- Test dependencies -->
