--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <url>https://github.com/cern-eam/eam-wshub-core</url>
 
     <properties>
-        <eam-wshub-proxyclient.version>12.1-1-SNAPSHOT</eam-wshub-proxyclient.version>
+        <eam-wshub-proxyclient.version>12.1-1</eam-wshub-proxyclient.version>
         <maven-release-plugin.version>3.1.0</maven-release-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <jaxws-rt.version>4.0.2</jaxws-rt.version>
