--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>ch.cern.eam</groupId>
             <artifactId>eam-wshub-proxyclient</artifactId>
-            <version>12.2-8</version>
+            <version>12.2-1-8</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
